# imagemagick-cpp

./: CMakeLists.txt  README.md
cmake/modules/: CMakeParseArguments.cmake  FindImageMagick.cmake  FindPackageHandleStandardArgs.cmake
